# Blinter

./: .coveragerc  .gitignore  Blinter.spec  MANIFEST.in  README.md  blinter.py  funding.json  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: Build-Release-PYPI.yml  Build-Release.yml  fuzz.yml
.well-known/: funding-manifest-urls
docs/: Architecture.md  Batch-File-Linter-Requirements.md
scripts/: corpus_baseline.py  corpus_lint.py  fix_cross_imports.py  fix_missing_imports.py  generate_corpus_baseline.py  generate_file_version_info.py  generate_init.py  install_blinter.cmd  split_blinter.py  sync_version.py  uninstall_blinter.cmd  verify.py  verify_package_parity.py
src/blinter/: __init__.py  __main__.py  _version.py  constants.py  logging_config.py  models.py  patterns.py
src/blinter/checkers/: __init__.py  advanced.py  globals.py  line_endings.py  orchestration.py  performance.py  security.py  style.py  syntax.py  vars.py  warnings.py
src/blinter/checkers/advanced/: __init__.py  enhanced.py  escaping.py  style_security_perf.py  vars_syntax.py
src/blinter/checkers/globals/: __init__.py  analysis.py  exit_flow.py  style_globals.py
src/blinter/cli/: args.py  main.py
src/blinter/config/: loader.py
src/blinter/engine/: __init__.py  dependencies.py  lines_cache.py  linter.py
src/blinter/io/: discovery.py  encoding.py
src/blinter/output/: formatters.py
src/blinter/parsing/: context.py  embedded.py  structure.py
src/blinter/rules/: helpers.py  registry.py
tests/: __init__.py  conftest.py  test_batch_script_examples.py  test_configuration.py  test_data_classes.py  test_delayed_expansion_special_chars.py  test_disabledelayedexpansion.py  test_edge_cases.py  test_error_handling.py  test_file_encoding.py  test_follow_calls_context.py  test_hypothesis_properties.py  test_lint_functionality.py  test_main_cli.py  test_max_line_length_cli.py  test_multi_file_output.py  test_orchestration.py  test_output_functions.py  test_s020_line_continuation.py  test_string_replacement_syntax.py  test_thread_safety.py  test_version.py
